--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
 
             <!-- Навигация на другие страницы -->
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -51,7 +51,7 @@
                     <p>Веб-сайт</p>
                 </a></li>
                 <li><a href="">
-                    <img src="./images/our_works/new-orlean-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <img src="./images/our_works/new_orlean_golden_star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </a></li>
@@ -71,12 +71,12 @@
                     <p>Приложение</p>
                 </a></li>
                 <li><a href="">
-                    <img src="./images/our_works/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <img src="./images/our_works/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </a></li>
                 <li><a href="">
-                    <img src="./images/our_works/limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                    <img src="./images/our_works/limited_edition.jpg" alt="Издание Limited Edition" width="370" height="294">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </a></li>
