--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -13,61 +15,61 @@
         <!-- Навигация -->
         <nav>
             <!-- Логотип -->
-            <a href="/">WebStudio</a>
+            <a href="/" class="logo">Web<span class="logo-studio">Studio</span></a>
 
             <!-- Навигация на другие страницы -->
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
         <!-- Контакты -->
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
         <!-- Баннер (блог-герой)-->
-        <section>
-            <H1>Эффективные решения<br> для вашего бизнеса</H1>
+        <section class="hero">
+            <H1 class="hero-title">Эффективные решения<br> для вашего бизнеса</H1>
 
             <!-- Кнопка перехода на страницу заказа -->
-            <button type="button">Заказать услугу</button>
+            <button type="button" class="button primary">Заказать услугу</button>
         </section>
 
         <!-- Особенности -->
-        <section>
-            <h2>Особенности</h2>
+        <section class="section features">
+            <h2 class="section-title">Особенности</h2>
 
-            <ul>
+            <ul class="features-list list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
 
-            <ul>
+            <ul class="work-list list">
                 <li>
                     <img src="./images/prof_activity/web_development.jpg" alt="Вебразработка" width="370">
                 </li>
@@ -81,27 +83,27 @@
         </section>
         
         <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="our-team section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="our-team-list list">
                 <li>
                     <img src="./images/our_team/demyanenko.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="title">Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/our_team/repina.jpg" alt="Ольга Репина" width="270">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="title">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/our_team/tarasow.jpg" alt="Николай Тарасов" width="270">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="title">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/our_team/ermakow.jpg" alt="Михаил Ермаков" width="270">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="title">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -111,24 +113,23 @@
     <!-- Футер -->
     <footer>
         <!-- Логотип -->
-        <a href="/">WebStudio</a>
+        <a href="/" class="logo">WebStudio</a>
 
         <!-- Адрес и контакты -->
         <address>
-            <ul>
+            <ul address-nav list>
                 <li>
-                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" target="_blank" rel="noreferrer noopener">
+                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" class="" target="_blank" rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
-            г. Киев, пр-т Леси Украинки, 26
         </address>
     </footer>
 </body>
