--- a/portfolio.html
+++ b/portfolio.html
@@ -5,91 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- Шапка страницы -->
     <header>
         <!-- Навигация -->
         <nav>
             <!-- Логотип -->
-            <a href="/">WebStudio</a>
+            <a href="/" class="logo">Web<span class="logo-studio">Studio</span></a>
 
             <!-- Навигация на другие страницы -->
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
         <!-- Контакты -->
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     
     <main>
         <!-- Наши работы -->
-        <section>
-            <h1>Наши работы</h1>
+        <section class="section">
+            <h2 class="section-title">Наши работы</h2>
 
             <!-- Фильтр -->
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="filter-list list">
+                <li><button type="button" class="button secondary">Все</button></li>
+                <li><button type="button" class="button secondary">Веб-сайты</button></li>
+                <li><button type="button" class="button secondary">Приложения</button></li>
+                <li><button type="button" class="button secondary">Дизайн</button></li>
+                <li><button type="button" class="button secondary">Маркетинг</button></li>
             </ul>
 
             <!-- Примеры работ -->
-            <ul>
-                <li><a href="">
-                    <img src="./images/our_works/tehnokryak.jpg" alt="Технокряк" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/new_orlean_golden_star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/prime.jpg" alt="Проект Prime" width="370" height="294">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/boxes.jpg" alt="" width="370" height="294">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/limited_edition.jpg" alt="Издание Limited Edition" width="370" height="294">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/lab.jpg" alt="Проект LAB" width="370" height="294">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
-                </a></li>
-                <li><a href="">
-                    <img src="./images/our_works/growing_business.jpg" alt="Growing Business" width="370" height="294">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
-                </a></li>
+            <ul class="examples-list list">
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/tehnokryak.jpg" alt="Технокряк" width="370" height="294">
+                        <h3 class="title">Технокряк</h3>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/new_orlean_golden_star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                        <h3 class="title">Ресторан Seafood</h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/prime.jpg" alt="Проект Prime" width="370" height="294">
+                        <h3 class="title">Проект Prime</h3>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/boxes.jpg" alt="" width="370" height="294">
+                        <h3 class="title">Проект Boxes</h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                        <h3 class="title">Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/limited_edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                        <h3 class="title">Издание Limited Edition</h3>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                        <a href="">
+                        <img src="./images/our_works/lab.jpg" alt="Проект LAB" width="370" height="294">
+                        <h3 class="title">Проект LAB</h3>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/our_works/growing_business.jpg" alt="Growing Business" width="370" height="294">
+                        <h3 class="title">Growing Business</h3>
+                        <p>Приложение</p>
+                    </a>
+                </li>
             </ul>
 
         </section>
@@ -103,7 +122,7 @@
 
         <!-- Адрес и контакты -->
         <address>
-            <ul>
+            <ul class="adress-nav list">
                 <li>
                     <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" target="_blank" rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
@@ -116,7 +135,6 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-            г. Киев, пр-т Леси Украинки, 26
         </address>
     </footer>
 </body>
