add styles into undex.html and portfolio.html, change img names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Навигация -->
         <nav>
             <!-- Логотип -->
-            <a href="/" class="logo">Web<span class="logo-studio">Studio</span></a>
+            <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
 
             <!-- Навигация на другие страницы -->
             <ul class="site-nav list">
@@ -43,7 +43,7 @@
             <H1 class="hero-title">Эффективные решения<br> для вашего бизнеса</H1>
 
             <!-- Кнопка перехода на страницу заказа -->
-            <button type="button" class="button primary">Заказать услугу</button>
+            <button type="button" class="order-button">Заказать услугу</button>
         </section>
 
         <!-- Особенности -->
@@ -76,13 +76,13 @@
 
             <ul class="work-list list">
                 <li>
-                    <img src="./images/prof_activity/web_development.jpg" alt="Вебразработка" width="370">
+                    <img src="./images/prof-activity/web-development.jpg" alt="Вебразработка" width="370">
                 </li>
                 <li>
-                    <img src="./images/prof_activity/adaptive_layout.jpg" alt="Адаптивная верстка" width="370">
+                    <img src="./images/prof-activity/adaptive-layout.jpg" alt="Адаптивная верстка" width="370">
                 </li>
                 <li>
-                    <img src="./images/prof_activity/web_design.jpg" alt="Вебдизайн" width="370">
+                    <img src="./images/prof-activity/web-design.jpg" alt="Вебдизайн" width="370">
                 </li>
             </ul>
         </section>
@@ -92,22 +92,22 @@
             <h2 class="section-title">Наша команда</h2>
             <ul class="our-team-list list">
                 <li>
-                    <img src="./images/our_team/demyanenko.jpg" alt="Игорь Демьяненко" width="270">
+                    <img src="./images/our-team/demyanenko.jpg" alt="Игорь Демьяненко" width="270">
                     <h3 class="title">Игорь Демьяненко</h3>
                     <p class="text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/repina.jpg" alt="Ольга Репина" width="270">
+                    <img src="./images/our-team/repina.jpg" alt="Ольга Репина" width="270">
                     <h3 class="title">Ольга Репина</h3>
                     <p class="text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/tarasow.jpg" alt="Николай Тарасов" width="270">
+                    <img src="./images/our-team/tarasow.jpg" alt="Николай Тарасов" width="270">
                     <h3 class="title">Николай Тарасов</h3>
                     <p class="text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/ermakow.jpg" alt="Михаил Ермаков" width="270">
+                    <img src="./images/our-team/ermakow.jpg" alt="Михаил Ермаков" width="270">
                     <h3 class="title">Михаил Ермаков</h3>
                     <p class="text">UI Designer</p>
                 </li>
@@ -118,13 +118,13 @@
     <!-- Футер -->
     <footer>
         <!-- Логотип -->
-        <a href="/" class="logo">WebStudio</a>
+        <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
 
         <!-- Адрес и контакты -->
         <address>
-            <ul address-nav list>
+            <ul class="address-nav list">
                 <li>
-                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" class="" target="_blank" rel="noreferrer noopener">
+                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" class="footer-address" target="_blank" rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
