--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <!-- Навигация -->
         <nav>
             <!-- Логотип -->
-            <a href="/" class="logo">Web<span class="logo-studio">Studio</span></a>
+            <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
 
             <!-- Навигация на другие страницы -->
             <ul class="site-nav list">
@@ -42,76 +42,76 @@
 
             <!-- Фильтр -->
             <ul class="filter-list list">
-                <li><button type="button" class="button secondary">Все</button></li>
-                <li><button type="button" class="button secondary">Веб-сайты</button></li>
-                <li><button type="button" class="button secondary">Приложения</button></li>
-                <li><button type="button" class="button secondary">Дизайн</button></li>
-                <li><button type="button" class="button secondary">Маркетинг</button></li>
+                <li><button type="button" class="filter-button">Все</button></li>
+                <li><button type="button" class="filter-button">Веб-сайты</button></li>
+                <li><button type="button" class="filter-button">Приложения</button></li>
+                <li><button type="button" class="filter-button">Дизайн</button></li>
+                <li><button type="button" class="filter-button">Маркетинг</button></li>
             </ul>
 
             <!-- Примеры работ -->
             <ul class="examples-list list">
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/tehnokryak.jpg" alt="Технокряк" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/technokryak.jpg" alt="Ноутбук со страницей вебсайта" width="370" height="294">
                         <h3 class="title">Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <p class="text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/new_orlean_golden_star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/new-orlean-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                         <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <p class="text">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/seafood.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
                         <h3 class="title">Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <p class="text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/prime.jpg" alt="Проект Prime" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/prime.jpg" alt="Наушники" width="370" height="294">
                         <h3 class="title">Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <p class="text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/boxes.jpg" alt="" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/boxes.jpg" alt="Упаковочные коробки" width="370" height="294">
                         <h3 class="title">Проект Boxes</h3>
-                        <p>Приложение</p>
+                        <p class="text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/inspiration-has-no-borders.jpg" alt="Монитор с вебсайтом" width="370" height="294">
                         <h3 class="title">Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <p class="text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/limited_edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/limited-edition.jpg" alt="Разворот журнала" width="370" height="294">
                         <h3 class="title">Издание Limited Edition</h3>
-                        <p>Дизайн</p>
+                        <p class="text">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                        <a href="">
-                        <img src="./images/our_works/lab.jpg" alt="Проект LAB" width="370" height="294">
+                        <a href="" class="link">
+                        <img src="./images/our-works/lab.jpg" alt="Бирка" width="370" height="294">
                         <h3 class="title">Проект LAB</h3>
-                        <p>Маркетинг</p>
+                        <p class="text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/our_works/growing_business.jpg" alt="Growing Business" width="370" height="294">
+                    <a href="" class="link">
+                        <img src="./images/our-works/growing-business.jpg" alt="Нойтук с открытым приложением" width="370" height="294">
                         <h3 class="title">Growing Business</h3>
-                        <p>Приложение</p>
+                        <p class="text">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -123,21 +123,21 @@
     <!-- Футер -->
     <footer>
         <!-- Логотип -->
-        <a href="/">WebStudio</a>
+        <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
 
         <!-- Адрес и контакты -->
         <address>
-            <ul class="adress-nav list">
+            <ul class="address-nav list">
                 <li>
-                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" target="_blank" rel="noreferrer noopener">
+                    <a href="https://goo.gl/maps/XjStZC7h4bTxzezK6" class="footer-address" target="_blank" rel="noreferrer noopener">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
