--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
 
-    <link rel="stylesheet" href="./css/styles.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -24,16 +23,16 @@
 
             <!-- Навигация на другие страницы -->
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./index.html" class="site-nav-link link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="site-nav-link link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
         <!-- Контакты -->
         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -43,7 +42,7 @@
             <H1 class="hero-title">Эффективные решения<br> для вашего бизнеса</H1>
 
             <!-- Кнопка перехода на страницу заказа -->
-            <button type="button" class="order-button">Заказать услугу</button>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 
         <!-- Особенности -->
@@ -52,20 +51,20 @@
 
             <ul class="features-list list">
                 <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="title">Планирование</h3>
-                    <p class="text"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-text"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -93,30 +92,30 @@
             <ul class="our-team-list list">
                 <li>
                     <img src="./images/our-team/demyanenko.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p class="text">Product Designer</p>
+                    <h3 class="our-team-title">Игорь Демьяненко</h3>
+                    <p class="our-team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/our-team/repina.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p class="text">Frontend Developer</p>
+                    <h3 class="our-team-title">Ольга Репина</h3>
+                    <p class="our-team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/our-team/tarasow.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p class="text">Marketing</p>
+                    <h3 class="our-team-title">Николай Тарасов</h3>
+                    <p class="our-team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/our-team/ermakow.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p class="text">UI Designer</p>
+                    <h3 class="our-team-title">Михаил Ермаков</h3>
+                    <p class="our-team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <!-- Футер -->
-    <footer>
+    <footer class="footer">
         <!-- Логотип -->
         <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
 
@@ -129,10 +128,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-nav-link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="address-nav-link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
