--- a/portfolio.html
+++ b/portfolio.html
@@ -133,10 +133,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-nav-link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="address-nav-link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
