--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="site-nav list">
                 <li><a href="./index.html" class="site-nav-link link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="site-nav-link link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="" class="site-nav-link">Контакты</a></li>
             </ul>
         </nav>
 
