--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Навигация -->
         <nav>
             <!-- Логотип -->
-            <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
+            <a href="./index.html" class="logo"><span class="part-logo">Web</span>Studio</a>
 
             <!-- Навигация на другие страницы -->
             <ul class="site-nav list">
@@ -117,7 +117,7 @@
     <!-- Футер -->
     <footer class="footer">
         <!-- Логотип -->
-        <a href="/" class="logo"><span class="part-logo">Web</span>Studio</a>
+        <a href="./index.html" class="logo"><span class="part-logo">Web</span>Studio</a>
 
         <!-- Адрес и контакты -->
         <address>
